@@ -6547,8 +6547,9 @@ header line in email messages,
     ("virtual-folder-member")
     ("header")
     ("label")
-    ("UID")
-    ("UIDL")
+    ("uid")
+    ("uidl")
+    ("message-id")
     ("text")
     ("header-or-text")
     ("recipient")
@@ -6608,8 +6609,9 @@ header line in email messages,
     (thread-all . vm-vs-thread-all)
     (header . vm-vs-header)
     (label . vm-vs-label)
-    (UID . vm-vs-UID)
-    (UIDL . vm-vs-UIDL)
+    (uid . vm-vs-uid)
+    (uidl . vm-vs-uidl)
+    (message-id . vm-vs-message-id)
     (text . vm-vs-text)
     (header-or-text . vm-vs-header-or-text)
     (recipient . vm-vs-recipient)
